<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".fragment.LoginFragment">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:text="@string/mypets"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <EditText
        android:id="@+id/login_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="10dp"
        android:ems="10"
        android:hint="@string/jmeno2"
        android:inputType="textPersonName"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/heslo"
        android:inputType="textPassword"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:layout_marginVertical="10dp"
        android:text="@string/prihlasit" />

    <Button
        android:id="@+id/btn_login_finger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="300dp"
        android:text="@string/otisk" />


</LinearLayout>